Stopped horizontal scroll

--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,8 @@
 body {
   color: white;
   background-color: #565759;
-  font-family: 'Lato', sans-serif; }
+  font-family: "Lato", sans-serif;
+  overflow-x: hidden; }
 
 a {
   color: yellow;
