--- a/styles/base/_all.scss
+++ b/styles/base/_all.scss
@@ -1,7 +1,8 @@
 body {
   color: $color-text;
   background-color: $color-background;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
+  overflow-x: hidden;
 }
 
 a {
